dataset1235/2025-2/610742602/users/2447224811/executions/677928262_4233865845.log
== RUN (2025-08-26 21:47:47)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:42:11)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(inptu("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:46:18)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:47:01)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:39:49)
-- CODE: 
celsius = float(inptu("digite a temperatura em celsius: "))
fahrenheit = (celsius * 9/5 )+ 32 
print( f"{fahrenheit:.2f")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:47:16)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:47:32)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:43:27)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite a temperatura em celsius: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite a temperatura em celsius: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite a temperatura em celsius: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite a temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite a temperatura em celsius: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite a temperatura em celsius: 86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:44:41)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round (fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:45:16)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:45:20)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:48:14)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 ))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite a temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite a temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite a temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite a temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite a temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite a temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:45:55)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:42:43)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(inptu("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:41:49)
-- CODE: 
#leitura da temperatura em celsius 
celsius = float(inptu("digite a temperatura em celsius: "))
#conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:46:15)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:42:10)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(inptu("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:41:48)
-- CODE: 
#leitura da temperatura em celsius 
celsius = float(inptu("digite a temperatura em celsius: "))
#conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(inptu("digite a temperatura em celsius: "))
                    ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:48:05)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite a temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite a temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite a temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite a temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite a temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite a temperatura em celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:44:40)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round (fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round (fahrenheit,2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:45:54)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:44:16)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( fahrenheit,2 ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:45:13)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:43:22)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite a temperatura em celsius: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite a temperatura em celsius: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite a temperatura em celsius: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite a temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite a temperatura em celsius: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite a temperatura em celsius: 86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:47:09)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:45:15)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit,2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit,2 "))
                             ^
SyntaxError: unterminated string literal (detected at line 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:47:08)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:39:51)
-- CODE: 
celsius = float(inptu("digite a temperatura em celsius: "))
fahrenheit = (celsius * 9/5 )+ 32 
print( f"{fahrenheit:.2f")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print( f"{fahrenheit:.2f")
                             ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:47:21)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:46:15)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print(round(fahrenheit, 2 "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print(round(fahrenheit, 2 "))
                              ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:43:39)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( f"{fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite a temperatura em celsius: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite a temperatura em celsius: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite a temperatura em celsius: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite a temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite a temperatura em celsius: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite a temperatura em celsius: 86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:44:17)
-- CODE: 
#Leitura da temperatura em celsius 
celsius = float(input("digite a temperatura em celsius: "))
#Conversão para fahrnheit
fahrenheit = (celsius * 9/5 )+ 32 
# Exibir resultado arredondado para duas casas decimais
print( fahrenheit,2 ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 6
    print( fahrenheit,2 ")
                        ^
SyntaxError: unterminated string literal (detected at line 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
